<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="fr.idapps.mbaas.livequizzmbaas.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question_text" />

        <EditText
            android:id="@+id/mQuestionTextEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Spinner
        android:id="@+id/mQuestionTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/mQCMSolutionsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/mAddSolutionQuestionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/question_add_answer" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/mSolutionsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mMapSolutionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mMapView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.MapView" />

        <com.google.android.gms.maps.StreetViewPanoramaView
            android:id="@+id/mStreetView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            class="com.google.android.gms.maps.StreetViewPanoramaView" />

    </LinearLayout>

    <Button
        android:id="@+id/mCreateQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/question_add" />

</LinearLayout>
